initial, some basic docs

--- a/README.org
+++ b/README.org
@@ -1,6 +1,20 @@
 * fxruby-enhancement
 
-  Description goes here.
+  The fxruby library is an excellent wrapper for the FOX toolkit. However, it reflects the
+  C++-ness of FOX, rather than being more Ruby-like. As such, creating composed objects with
+  it tends to be rather ugly and cumbersome.
+
+  fxruby-enhancement is a wrapper for the wrapper, to "rubyfy" it and make it more easy to 
+  use for Rubyists. 
+
+  fxruby-enhancement is basically a DSL of sorts, and every effort has been taken to make 
+  it intuitive to use. Once you get the hang of it, you should be able to look at the FXRuby
+  API documentation and infer the DSL construct for fxruby-enhancement.
+
+** TODO Examples
+** TODO Documentation
+** TODO Release Notes
+** TODO Known Issues
 
 ** Contributing to fxruby-enhancement
  
@@ -14,5 +28,5 @@
 
 ** Copyright
 
-   Copyright (c) 2016 Fred Mitchell. See LICENSE.txt for
+   Copyright (c) 2016-2017 Fred Mitchell. See LICENSE.txt for
    further details.
