template generation in the works.

--- a/README.org
+++ b/README.org
@@ -1,23 +1,22 @@
 * fxruby-enhancement
+** Introduction
+   The fxruby library is an excellent wrapper for the FOX toolkit. However, it reflects the
+   C++-ness of FOX, rather than being more Ruby-like. As such, creating composed objects with
+   it tends to be rather ugly and cumbersome.
 
-  The fxruby library is an excellent wrapper for the FOX toolkit. However, it reflects the
-  C++-ness of FOX, rather than being more Ruby-like. As such, creating composed objects with
-  it tends to be rather ugly and cumbersome.
+   fxruby-enhancement is a wrapper for the wrapper, to "rubyfy" it and make it more easy to 
+   use for Rubyists. 
 
-  fxruby-enhancement is a wrapper for the wrapper, to "rubyfy" it and make it more easy to 
-  use for Rubyists. 
-
-  fxruby-enhancement is basically a DSL of sorts, and every effort has been taken to make 
-  it intuitive to use. Once you get the hang of it, you should be able to look at the FXRuby
-  API documentation and infer the DSL construct for fxruby-enhancement.
+   fxruby-enhancement is basically a DSL of sorts, and every effort has been taken to make 
+   it intuitive to use. Once you get the hang of it, you should be able to look at the FXRuby
+   API documentation and infer the DSL construct for fxruby-enhancement.
 
 ** Documentation
 *** Examples
     #+begin_src ruby
     class Main < FXMainWindow
-      include Enhancement
 
-      composing :my_window do
+      compose :my_window do
         title "RubyNEAT Panel"
         show PLACEMENT_SCREEN
         width 700
