--- a/README.org
+++ b/README.org
@@ -13,6 +13,7 @@
 
 ** Documentation
 *** Examples
+    Class-based enhancement:
     #+begin_src ruby
     class Main < FXMainWindow
 
@@ -45,6 +46,43 @@
       end
     end    
     #+end_src
+
+    Class-free enhancement:
+    #+begin_src ruby
+    mw = fx_main_window :my_window do 
+        title "RubyNEAT Panel"
+        width 700
+        height 400
+        opts DECOR_ALL
+        x 10
+        y 10
+        instance { show PLACEMENT_SCREEN }
+        fx_tab_book :my_book do |tab_book_ob|
+          x 0
+          y 0
+          width 500
+          height 100
+          pad_bottom 10
+          fx_text :my_text1, :my_window { |text_ob|
+            width 200
+            height 100
+            instance my_window: :on_click
+          }
+          fx_text :my_text2, :my_window { 
+            width 200
+            height 100
+            instance { |t| puts "called after object initialization" }
+          }
+        end
+      end
+
+      def mw.on_click
+        ...
+      end
+    end    
+    #+end_src
+
+
 
 ** TODO Release Notes
 ** TODO Known Issues
