--- a/README.org
+++ b/README.org
@@ -13,22 +13,33 @@
    - [[#release-notes][Release Notes]]
    - [[#known-issues][Known Issues]]
    - [[#contributing-to-fxruby-enhancement][Contributing to fxruby-enhancement]]
-   - [[#copyright][Copyright]]
+   - [[#copyright-and-licensing][Copyright and Licensing]]
    - [[#the-junkyard--scratchpad][The Junkyard / Scratchpad]]
      - [[#genesis-of-the-meta-meta-programming-whereby-brain-goes-boom][Genesis of the meta-meta programming, whereby brain goes boom]]
 
 * fxruby-enhancement
 ** Introduction
-   The fxruby library is an excellent wrapper for the FOX toolkit. However, it reflects the
-   C++-ness of FOX, rather than being more Ruby-like. As such, creating composed objects with
-   it tends to be rather ugly and cumbersome.
+   The fxruby library is an excellent wrapper for the FOX toolkit.
+   However, it reflects the C++-ness of FOX, rather than being more
+   Ruby-like. As such, creating composed objects with it tends to be
+   rather ugly and cumbersome. For every new component you create with
+   fxruby, you are handed back a reference to that object, which you'll
+   need to store somewhere. And then all the subsequent child objects
+   will need to be passed pointers to the parent objects.
 
-   fxruby-enhancement is a wrapper for the wrapper, to "rubyfy" it and make it more easy to 
-   use for Rubyists. 
+   So, if you need to redo a layout, it becomes a messy exercise.
 
-   fxruby-enhancement is basically a DSL of sorts, and every effort has been taken to make 
-   it intuitive to use. Once you get the hang of it, you should be able to look at the FXRuby
-   API documentation and infer the DSL construct for fxruby-enhancement.
+   fxruby-enhancement makes this a snap to do. You simply declare
+   your GUI arrangement in a nested fashion. fxruby-enhancement will
+   take care of passing parents to the nested children, and other issues
+   as well. You can now focus on creating a good GUI layout that you
+   can change on the fly without much fuss and bother.
+
+   fxruby-enhancement is basically a DSL of sorts, and every effort has
+   been taken to make it intuitive to use. Once you get the hang of it,
+   you should be able to look at the FXRuby API documentation and infer
+   the DSL construct for fxruby-enhancement. Please also see the many
+   [[file:examples][examples]].
    
 ** Installation
    To install the gem from commandline:
@@ -209,7 +220,7 @@
     end    
     #+end_src
 
-    [[file:examples/hello.rb][Hello World]] example (full):
+    [[file:examples/hello.rb][Hello World]] example (full) the Enhancement Way
     #+begin_src ruby
 #!/usr/bin/env ruby
 require 'fxruby-enhancement'
@@ -245,6 +256,28 @@ fox_component :app do |app|
   app.launch
 end
     #+end_src
+    
+    Hello World the old fxruby way:
+    #+begin_src ruby
+#!/usr/bin/env ruby
+
+require 'fox16'
+
+include Fox
+
+application = FXApp.new("Hello", "FoxTest")
+main = FXMainWindow.new(application, "Hello", nil, nil, DECOR_ALL)
+FXButton.new(main, "&Hello, World!", nil, application, FXApp::ID_QUIT)
+application.create()
+main.show(PLACEMENT_SCREEN)
+application.run()
+    #+end_src
+
+    Even though the old way has a slightly less line count, you can
+    see how messy it can be assigning each newly-created object to
+    a variable, and then having to pass the variable to the children.
+    Perhaps this example is too small, but perhaps the next one will
+    more illustrative.
 
     [[file:examples/bounce.rb][Bouncing Ball]] example (full):
     #+begin_src ruby
@@ -408,8 +441,195 @@ if __FILE__ == $0
 end
     #+end_src
 
-** TODO Release Notes
-** TODO Known Issues
+    Bouncing Ball the old fxruby way:
+    #+begin_src ruby
+require 'fox16'
+
+include Fox
+
+# How long to pause between updates (in milliseconds)
+ANIMATION_TIME = 20
+
+class Ball
+
+  attr_reader :color
+  attr_reader :center
+  attr_reader :radius
+  attr_reader :dir
+  attr_reader :x, :y
+  attr_reader :w, :h
+  attr_accessor :worldWidth
+  attr_accessor :worldHeight
+
+  # Returns an initialized ball
+  def initialize(r)
+    @radius = r
+    @w = 2*@radius
+    @h = 2*@radius
+    @center = FXPoint.new(50, 50)
+    @x = @center.x - @radius
+    @y = @center.y - @radius
+    @color = FXRGB(255, 0, 0) # red
+    @dir = FXPoint.new(-1, -1)
+    setWorldSize(1000, 1000)
+  end
+
+  # Draw the ball into this device context
+  def draw(dc)
+    dc.setForeground(color)
+    dc.fillArc(x, y, w, h, 0, 64*90)
+    dc.fillArc(x, y, w, h, 64*90, 64*180)
+    dc.fillArc(x, y, w, h, 64*180, 64*270)
+    dc.fillArc(x, y, w, h, 64*270, 64*360)
+  end
+
+  def bounce_x
+    @dir.x=-@dir.x
+  end
+
+  def bounce_y
+    @dir.y=-@dir.y
+  end
+
+  def collision_y?
+    (y<0 && dir.y<0) || (y+h>worldHeight && dir.y>0)
+  end
+
+  def collision_x?
+    (x<0 && dir.x<0) || (x+w>worldWidth && dir.x>0)
+  end
+
+  def setWorldSize(ww, wh)
+    @worldWidth = ww
+    @worldHeight = wh
+  end
+
+  def move(units)
+    dx = dir.x*units
+    dy = dir.y*units
+    center.x += dx
+    center.y += dy
+    @x += dx
+    @y += dy
+    if collision_x?
+      bounce_x
+      move(units)
+    end
+    if collision_y?
+      bounce_y
+      move(units)
+    end
+  end
+end
+
+class BounceWindow < FXMainWindow
+
+  include Responder
+
+  def initialize(app)
+    # Initialize base class first
+    super(app, "Bounce", :opts => DECOR_ALL, :width => 400, :height => 300)
+
+    # Set up the canvas
+    @canvas = FXCanvas.new(self, :opts => LAYOUT_FILL_X|LAYOUT_FILL_Y)
+
+    # Set up the back buffer
+    @backBuffer = FXImage.new(app, nil, IMAGE_KEEP)
+
+    # Handle expose events (by blitting the image to the canvas)
+    @canvas.connect(SEL_PAINT) { |sender, sel, evt|
+      FXDCWindow.new(sender, evt) { |dc|
+        dc.drawImage(@backBuffer, 0, 0)
+      }
+    }
+
+    # Handle resize events
+    @canvas.connect(SEL_CONFIGURE) { |sender, sel, evt|
+      @backBuffer.create unless @backBuffer.created?
+      @backBuffer.resize(sender.width, sender.height)
+      @ball.setWorldSize(sender.width, sender.height)
+      drawScene(@backBuffer)
+    }
+
+    @ball = Ball.new(20)
+  end
+
+  #
+  # Draws the scene into the back buffer
+  #
+  def drawScene(drawable)
+    FXDCWindow.new(drawable) { |dc|
+      dc.setForeground(FXRGB(255, 255, 255))
+      dc.fillRectangle(0, 0, drawable.width, drawable.height)
+      @ball.draw(dc)
+    }
+  end
+
+  def updateCanvas
+    @ball.move(10)
+    drawScene(@backBuffer)
+    @canvas.update
+  end
+
+  #
+  # Handle timeout events
+  #
+  def onTimeout(sender, sel, ptr)
+    # Move the ball and re-draw the scene
+    updateCanvas
+
+    # Re-register the timeout
+    getApp().addTimeout(ANIMATION_TIME, method(:onTimeout))
+
+    # Done
+    return 1
+  end
+
+  #
+  # Create server-side resources
+  #
+  def create
+    # Create base class
+    super
+
+    # Create the image used as the back-buffer
+    @backBuffer.create
+
+    # Draw the initial scene into the back-buffer
+    drawScene(@backBuffer)
+
+    # Register the timer used for animation
+    getApp().addTimeout(ANIMATION_TIME, method(:onTimeout))
+
+    # Show the main window
+    show(PLACEMENT_SCREEN)
+  end
+end
+
+if __FILE__ == $0
+  FXApp.new("Bounce", "FXRuby") do |theApp|
+    BounceWindow.new(theApp)
+    theApp.create
+    theApp.run
+  end
+end
+    #+end_src
+    
+    The Ball class is the same, but the actual Fox-related code
+    should clearly illustrate the power of Enhancement.
+
+    More examples can be found [[file:examples][HERE]].
+
+** Release Notes
+   | Version |       Date | Notes           |
+   |---------+------------+-----------------|
+   |   0.0.2 | 2017-01-11 | Initial release |
+   |         |            |                 |
+** Known Issues
+   | Version |       Date | Issues                     |
+   |---------+------------+----------------------------|
+   |   0.0.2 | 2017-01-11 | Not enough example code!!! |
+   |         |            |                            |
 ** Contributing to fxruby-enhancement
  
    - Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet.
@@ -420,9 +640,8 @@ end
    - Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
    - Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
 
-** Copyright
-
-   Copyright (c) 2016-2017 Fred Mitchell. See LICENSE.txt for
+** Copyright and Licensing
+   Copyright (c) 2016-2017 Fred Mitchell. See [[file:LICENSE.txt][MIT License]] for
    further details.
 ** The Junkyard / Scratchpad
    These are my personal notes, not meant for anyone else.
